--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"cors": "^2.8.4",
 		"firebase-admin": "^6.0.0",
 		"firebase-functions": "^2.0.5",
-		"firebase-tools": "^5.1.1"
+		"firebase-tools": "^5.1.1",
+		"stripe": "^6.13.0"
 	}
 }
